Changed img source for html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </h3>
 
         <div class="play-image" id="img-div">
-            <img src="./images/psmain-img.png"
+            <img src="./images/psmain-img.jpg"
                 alt="Playstation Consoles" class="playstation-image" id="image">
             <div class="ps-caption" id="img-caption">
                 Different Playstation consoles released by Sony over the years, excluding their handheld devices.
@@ -33,7 +33,7 @@
 
             <ul id="tribute-info">
                 <div class="play-time" id="ps1">
-                    <img src="./images/ps1-img.png"
+                    <img src="./images/ps1-img.jpg"
                         alt="Original Playstation and PS One" class="ps-image" id="ps1-img">
                     <h3 class="playstation">
                         Playstation 1 (PS1)
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="play-time" id="ps2">
-                    <img src="./images/ps2-img.png"
+                    <img src="./images/ps2-img.jpg"
                         alt="Playstation 2 and Playstation 2 Slim" class="ps-image" id="ps2-img">
                     <h3 class="playstation">
                         Playstation 2 (PS2)
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="play-time">
-                    <img src="./images/psp-img.png"
+                    <img src="./images/psp-img.jpg"
                         alt="The PSP and all its different models/versions" class="ps-image" id="psp-img">
                     <h3 class="playstation">
                         Playstation Portable (PSP)
@@ -112,7 +112,7 @@
                 </div>
 
                 <div class="play-time">
-                    <img src="./images/ps3-img.png"
+                    <img src="./images/ps3-img.jpg"
                         alt="PS3 and its other versions/models" class="ps-image" id="ps3-img">
                     <h3 class="playstation">
                         Playstation 3 (PS3)
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="play-time">
-                    <img src="./images/psvita-img.png" alt="Playstation Vita"
+                    <img src="./images/psvita-img.jpg" alt="Playstation Vita"
                         class="ps-image" id="ps-img">
                     <h3 class="playstation">
                         Playstation Vita (PS Vita)
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class="play-time">
-                    <img src="./images/ps4-img.png"
+                    <img src="./images/ps4-img.jpg"
                         alt="Playstation and its other versions/models" class="ps-image" id="ps4-img">
                     <h3 class="playstation">
                         Playstation 4 (PS4)
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="play-time">
-                    <img src="./images/ps5-img.png" alt="Playstation 5"
+                    <img src="./images/ps5-img.jpg" alt="Playstation 5"
                         class="ps-image" id="ps5-img">
                     <h3 class="playstation">
                         Playstation 5 (PS5)
